Fixed section font size, overlapping in the footer and added section name in the section navigation

--- a/src/_sass/_page-nav.sass
+++ b/src/_sass/_page-nav.sass
@@ -13,11 +13,11 @@
     a
       color: $color-dark
       display: block
+      font-size: 12px
       padding: 5px
 
-    &.active
-      > a
-        font-weight: bold
+    span
+      font-size: 12
 
       li.active
         a
