--- a/src/_sass/_section-nav.sass
+++ b/src/_sass/_section-nav.sass
@@ -15,6 +15,12 @@
     li
       margin-bottom: 5px
 
+      .section-nav-list
+        margin-bottom: 15px
+
+    a
+      font-size: 12px
+
     > .section-nav-list
       padding: 0
 
@@ -34,9 +40,16 @@
 
   &-list-title
     display: block
-    font-weight: bold
+    font-size: 12px
     margin-bottom: 15px
     padding-top: 15px
+
+  &-list-main-title
+    display: block
+    font-size: 12px
+    font-weight: bold
+    margin-bottom: 15px
+    text-transform: uppercase
 
   @media (max-width: $ak-breakpoint-lg)
     background-color: $color-light-gray
